<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/home"
        android:title="@string/home" />

    <item

        android:id="@+id/nav_dept"
        android:title="@string/dept"
        android:icon="@mipmap/department"/>

    <item
        android:id="@+id/nav_faculty"
        android:title="@string/faculty"
        android:icon="@mipmap/faculty"/>

    <item
        android:id="@+id/nav_subject"
        android:title="@string/subject"
        android:icon="@mipmap/subject"/>

    <item
        android:id="@+id/nav_student"
        android:title="@string/student"
        android:icon="@mipmap/student" />

    <item
        android:id="@+id/nav_time_table"
        android:title="@string/timetable"
        android:icon="@mipmap/time_table"/>

    <item
        android:id="@+id/nav_attendance"
        android:title="@string/Attendance"
        android:icon="@mipmap/attendance"/>

    <item
        android:id="@+id/nav_mid_result"
        android:title="@string/MidResult"
        android:icon="@mipmap/mid_result"/>

    <item
        android:id="@+id/nav_global"
        android:title="@string/global"
        android:icon="@mipmap/global_notice_board"></item>

    <item
        android:id="@+id/nav_change_pwd"
        android:title="@string/change_pwd"
        android:icon="@mipmap/change_pass"></item>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@mipmap/logout"/>
</menu>